--- a/src/hu/java/zalanmartinak/GraphicWindow.form
+++ b/src/hu/java/zalanmartinak/GraphicWindow.form
@@ -7,7 +7,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="e3588" layout-manager="BorderLayout" hgap="0" vgap="0">
+      <grid id="e3588" binding="abc" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints border-constraint="Center"/>
         <properties/>
         <border type="none"/>
